# optimization-rust

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  search-index.js
examples/: line_fitting.rs  minimal.rs  rosenbrock.rs
implementors/optimization/: trait.LineSearch.js
optimization/: index.html  sidebar-items.js  struct.ArmijoLineSearch.html  struct.ExactLineSearch.html  struct.FixedStepWidth.html  struct.Func.html  struct.GradientDescent.html  struct.NumericalDifferentiation.html  struct.StochasticGradientDescent.html  trait.Evaluation.html  trait.Function.html  trait.Function1.html  trait.LineSearch.html  trait.Minimizer.html  trait.Summation.html  trait.Summation1.html
optimization/gd/: sidebar-items.js  struct.GradientDescent.html
optimization/line_search/: sidebar-items.js  struct.ArmijoLineSearch.html  struct.ExactLineSearch.html  struct.FixedStepWidth.html  trait.LineSearch.html
optimization/numeric/: sidebar-items.js  struct.NumericalDifferentiation.html
optimization/problems/: index.html  sidebar-items.js  struct.Rosenbrock.html  struct.Sphere.html  trait.Problem.html
optimization/sgd/: sidebar-items.js  struct.StochasticGradientDescent.html
optimization/types/: sidebar-items.js  struct.Func.html  trait.Evaluation.html  trait.Function.html  trait.Function1.html  trait.Minimizer.html  trait.Summation.html  trait.Summation1.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
src/: gd.rs  gradient_descent.rs  lib.rs  line_search.rs  numeric.rs  problems.rs  sgd.rs  types.rs  utils.rs
(+26 files in other folders)
