[package]
name = "optimization"
version = "0.1.0"
authors = ["Oliver Mader <b52@reaktor42.de>"]
license = "MIT"
description = "Collection of optimization algorithms"
repository = "https://github.com/b52/optimization-rust"
readme = "README.md"
keywords = ["optimization", "minimization", "numeric"]

[dependencies]
log = "0.3"
rand = "0.3"
clippy = { version = "0.0", optional = true }
herbie-lint = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.3"

[features]
unstable = ["clippy", "herbie-lint"]
